# srcdupchk

./: .gitignore  CHANGES  CsvQuote.cpp  CsvQuote.h  DcHeaders.h  DirWalker.cpp  DirWalker.h  FileInfo.cpp  FileInfo.h  HashCode.cpp  HashCode.h  Makefile.am  Makefile.in  README  README.md  SourceTreeChecker.cpp  SourceTreeChecker.h  SourceTreeInfo.cpp  SourceTreeInfo.h  SrcDupChk.cpp  TODO  UnitTest.cpp  UnitTest.h  configure  configure.ac  md5.c
test2/: odd.txt
